--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -20,6 +20,8 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - run: npm run build
+    - name: npm run build is running
+      run: npm run build
+    
     #- run: npm run build --if-present
     #- run: npm test
