--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Run pwd # 동작명
       run: pwd # 실제 동작
     - name: Run ls -al
       run: ls -al
-    - name: Run build
-      run: npm run build
