--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
     - name: Run pwd # 동작명
+      uses: actions/checkout@v2
       run: pwd # 실제 동작
     - name: Run ls -al
       run: ls -al
+    - name: Run build
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_NAME }}
+        key: ${{ secrets.SSH_PEM_KEY }}
+       # passphrase: ${{ secrets.SSH_PEM_PASSPHRASE }}
+     #   source: "build/*"
+        strip_components: 1
+        target: ${{ secrets.SERVER_PATH }}
+    
