--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
       run: ls -al
     - name: Run build
       uses: appleboy/scp-action@master
+      run: npm run build
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_NAME }}
