--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,12 @@ jobs:
       run: pwd # 실제 동작
     - name: Run ls -al
       run: ls -al
+    - name: install
+      run: npm install
+    - name: build
+      run: npm run build
     - name: Run build
       uses: appleboy/scp-action@master
-      run: npm run build
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_NAME }}
