--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    # - uses: actions/checkout@v2
     
     - name: Run pwd # 동작명
       run: pwd # 실제 동작
@@ -13,31 +13,39 @@ jobs:
     - name: Run ls -al
       run: ls -al
 
-    - name: Checkout code
-      uses: actions/checkout@v3
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: "18"
-
-    - name: Install Dependencies
-      run: 
-        npm ci
-    # - name: install
-    #   run: npm install
+    - uses: actions/checkout@v3
+    - run: npm ci
+    - run: npm test
+    - run: npm run build
 
 
-    - name: build
-      run: npm run build
+    # - name: Checkout code
+    #   uses: actions/checkout@v3
 
-    - name: Run build
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_NAME }}
-        key: ${{ secrets.SSH_PEM_KEY }}
-       # passphrase: ${{ secrets.SSH_PEM_PASSPHRASE }}
-        strip_components: 1
-        target: ${{ secrets.SERVER_PATH }}
+    # - name: Setup Node.js
+    #   uses: actions/setup-node@v3
+    #   with:
+    #     node-version: "18"
+
+    # - name: Install Dependencies
+    #   run: 
+    #     npm ci
+    # # - name: install
+    # #   run: npm install
+
+
+    # - name: build
+    #   run: npm run build
+
+    # - name: Run build
+    #   uses: appleboy/scp-action@master
+    #   with:
+    #     host: ${{ secrets.SERVER_HOST }}
+    #     username: ${{ secrets.SERVER_NAME }}
+    #     key: ${{ secrets.SSH_PEM_KEY }}
+    #    # passphrase: ${{ secrets.SSH_PEM_PASSPHRASE }}
+    #     source: "build/*"
+    #     strip_components: 1
+    #     target: ${{ secrets.SERVER_PATH }}
     
