--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,51 +1,20 @@
-name: Hello world
-on: [push]
-
+name: Hello World
+on:
+  push:
+    branches: ['main']
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-    # - uses: actions/checkout@v2
-    
-    - name: Run pwd # 동작명
-      run: pwd # 실제 동작
+      - uses: actions/checkout@v3.3.0
 
-    - name: Run ls -al
-      run: ls -al
-
-
-    - uses: actions/checkout@v3
-    - run: npm ci
-    - run: npm test
-    - run: npm run build
-
-
-    # - name: Checkout code
-    #   uses: actions/checkout@v3
-
-    # - name: Setup Node.js
-    #   uses: actions/setup-node@v3
-    #   with:
-    #     node-version: "18"
-
-    # - name: Install Dependencies
-    #   run: 
-    #     npm ci
-    # # - name: install
-    # #   run: npm install
-
-
-    # - name: build
-    #   run: npm run build
-
-    # - name: Run build
-    #   uses: appleboy/scp-action@master
-    #   with:
-    #     host: ${{ secrets.SERVER_HOST }}
-    #     username: ${{ secrets.SERVER_NAME }}
-    #     key: ${{ secrets.SSH_PEM_KEY }}
-    #    # passphrase: ${{ secrets.SSH_PEM_PASSPHRASE }}
-    #     source: "build/*"
-    #     strip_components: 1
-    #     target: ${{ secrets.SERVER_PATH }}
-    
+      - name: execute remote ssh
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.REMOTE_SSH_HOST }}
+          username: ${{ secrets.REMOTE_SSH_USERNAME }}
+          key: ${{ secrets.REMOTE_SSH_KEY }}
+          #passphrase: ${{ secrets.REMOTE_SSH_PASSPHRASE }}
+          port: ${{ secrets.REMOTE_SSH_PORT }}
+          script: |
+            whoami
