--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,6 @@ jobs:
           script: |
             whoami
             pwd
+            cd /zelkova-front/FE
+            git pull
+            npm run build
