--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,11 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    strategy: // 5
+
+    strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [20,x]
+
     steps:
       - uses: actions/checkout@v3.3.0
 
