--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,15 @@ jobs:
         node-version: [20,x]
 
     steps:
-      - uses: actions/checkout@v3.3.0
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
 
       - name: execute remote ssh
         uses: appleboy/ssh-action@master
