--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,15 +11,7 @@ jobs:
         node-version: [20,x]
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+      - uses: actions/checkout@v3.3.0
 
       - name: execute remote ssh
         uses: appleboy/ssh-action@master
@@ -31,7 +23,6 @@ jobs:
           script: |
             pwd
             cd /zelkova-front/FE
-            git pull
+            nvm install 20
             nvm use 20
-            nvm ls
             node -v
