--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,11 @@ jobs:
           port: ${{ secrets.REMOTE_SSH_PORT }}
           script: |
             pwd
+            export NVM_DIR=~/.nvm
+            source ~/.nvm/nvm.sh
+            npm --help
             cd /zelkova-front/FE
             nvm install 20
             nvm use 20
             node -v
+  
