--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,6 @@ jobs:
             nvm install 20
             nvm use 20
             node -v
+            npm install
             npm run build
   
