--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,5 @@ jobs:
             cd /zelkova-front/FE
             nvm install 20
             nvm use 20
-            npm ci
-            npm run build
+            pwd
   
