--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-kakao-maps-sdk": "^1.1.27",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
@@ -44,7 +45,6 @@
     ]
   },
   "proxy": "http://49.247.174.109:8080",
-
   "devDependencies": {
     "prettier": "^3.3.0"
   }
