--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --check ./src",
-    "format:fix": "prettier --write ./src"
+    "format:fix": "prettier --write ./src",
+    "prepare": "husky"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "husky": "^9.0.11",
     "prettier": "^3.3.0"
   },
   "proxy": "http://49.247.174.109:8080"
