--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "craco start --config craco.config.js",
+    "build": "craco build --config craco.config.js",  
+    "test": "craco test",  
+    "eject": "craco eject",
     "format": "prettier --check ./src",
     "format:fix": "prettier --write ./src",
     "prepare": "husky"
@@ -49,8 +49,10 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "husky": "^9.0.11",
     "prettier": "^3.3.0"
   },
   "proxy": "http://49.247.174.109:8080"
 }
+
