--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.2",
     "dompurify": "^3.1.5",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-modal": "^3.16.1",
@@ -56,3 +57,4 @@
   },
   "proxy": "http://49.247.174.109:8080"
 }
+
