--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
     "react-router": "^7.0.1",
-    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
+    "sockjs-client": "^1.6.1",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
