test: bugfix 최신화 3

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
           password: ${{ secrets.REMOTE_PASSWORD }}
           script_stop: true
           script: |
-            ECHO "TOMHOON HELLO"
+            echo "TOMHOON HELLO"
