test: bugfix최신화 테스트 4

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,7 @@ jobs:
           password: ${{ secrets.REMOTE_PASSWORD }}
           script_stop: true
           script: |
-            echo "TOMHOON HELLO"
+            ECHO "TOMHOON HELLO"
+            cd ~/../
+            ls
+            
