--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           password: ${{ secrets.REMOTE_PASSWORD }}
           script_stop: true
           script: |
-            ECHO "TOMHOON HELLO"
+            echo "TOMHOON HELLO"
             cd ~/../
             ls
             
