--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
   DeployTomhoon:
     runs-on: ubuntu-latest
     steps:
-      - name: Let's connect ssh
+      - name: After Finish Pull Request Merged 
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.REMOTE_HOST }}
@@ -21,6 +21,9 @@ jobs:
             git checkout bugfix
             git merge --no-ff main -m "Merge branch 'main' into bugfix"
             git push
+
+            git checkout main
+            npm run build
             
       - name: Notify Discord on Success
         if: success() # Only run this step if the previous steps succeeded
@@ -35,3 +38,4 @@ jobs:
           curl -H "Content-Type: application/json" \
           -d '{"content": "❌ main브랜치 bugfix에 최신화 실패"}' \
           ${{ secrets.DISCORD_WEBHOOK_URL }}
+
