fix: nvm으로 설치하여 OS에 저장이 안돼 npm 먹통 수정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,11 @@ jobs:
             git checkout bugfix
             git merge --no-ff main -m "Merge branch 'main' into bugfix"
             git push
+
             git checkout main
             pwd
             node -v
+            npm run build
             
       - name: Notify Discord on Success
         if: success() # Only run this step if the previous steps succeeded
